[package]
name = "unicode-math-class"
version = "0.1.0"
authors = ["Laurenz <laurmaedje@gmail.com>"]
edition = "2021"
description = "Determine the Unicode class of a mathematical character."
repository = "https://github.com/typst/unicode-math-class"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["text-processing", "mathematics"]
keywords = ["unicode", "class"]
